--- a/QuizGame/app/src/main/res/layout/start_page.xml
+++ b/QuizGame/app/src/main/res/layout/start_page.xml
@@ -11,42 +11,62 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="133dp"
         android:text="Quiz Game"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="132dp"
-        tools:layout_editor_absoluteY="140dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/geographyBtn"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        app:srcCompat="@drawable/globe"
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="367dp" />
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="123dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="160dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:srcCompat="@drawable/globe" />
 
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        app:srcCompat="@drawable/book"
-        tools:layout_editor_absoluteX="228dp"
-        tools:layout_editor_absoluteY="367dp" />
+        android:layout_marginTop="123dp"
+        android:layout_marginEnd="63dp"
+        android:layout_marginBottom="170dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/geographyBtn"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:srcCompat="@drawable/book" />
 
     <ImageButton
         android:id="@+id/imageButton3"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        app:srcCompat="@drawable/science"
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="539dp" />
+        android:layout_marginStart="58dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/science" />
 
     <ImageButton
         android:id="@+id/imageButton4"
         android:layout_width="120dp"
         android:layout_height="120dp"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@drawable/star"
-        tools:layout_editor_absoluteX="228dp"
-        tools:layout_editor_absoluteY="539dp" />
+        tools:layout_editor_absoluteX="228dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -86,6 +106,7 @@
         android:layout_height="wrap_content"
         android:onClick="hello"
         android:text="Button"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="198dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="196dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
