--- a/QuizGame/app/src/main/res/layout/start_page.xml
+++ b/QuizGame/app/src/main/res/layout/start_page.xml
@@ -25,42 +25,42 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="58dp"
-        android:layout_marginTop="123dp"
+        android:layout_marginTop="203dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="160dp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+        app:layout_constraintEnd_toStartOf="@+id/historyBtn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/globe" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/historyBtn"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="123dp"
+        android:layout_marginTop="193dp"
         android:layout_marginEnd="63dp"
         android:layout_marginBottom="170dp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/geographyBtn"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/book" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/scienceBtn"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="58dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
+        app:layout_constraintEnd_toStartOf="@+id/popcultureBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/science" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/popcultureBtn"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginEnd="63dp"
@@ -87,7 +87,7 @@
         android:layout_marginEnd="98dp"
         android:text="History"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+        app:layout_constraintTop_toBottomOf="@+id/historyBtn" />
 
     <TextView
         android:id="@+id/textView2"
@@ -97,7 +97,7 @@
         android:layout_marginTop="2dp"
         android:text="Science"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
+        app:layout_constraintTop_toBottomOf="@+id/scienceBtn" />
 
     <TextView
         android:id="@+id/textView2"
@@ -107,16 +107,6 @@
         android:layout_marginEnd="85dp"
         android:text="Pop Culture"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />
+        app:layout_constraintTop_toBottomOf="@+id/popcultureBtn" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:onClick="hello"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
