--- a/QuizGame/app/src/main/res/layout/fragment_hard_tab.xml
+++ b/QuizGame/app/src/main/res/layout/fragment_hard_tab.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HardTab">
+    tools:context=".fragments.HardTab">
 
     <TextView
         android:id="@+id/EasyText"
