--- a/QuizGame/app/src/main/res/layout/activity_geography_easy.xml
+++ b/QuizGame/app/src/main/res/layout/activity_geography_easy.xml
@@ -8,8 +8,8 @@
     tools:context=".GeographyEasy">
 
     <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
@@ -19,7 +19,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Question 1:"
@@ -51,7 +51,7 @@
                 android:text="RadioButton" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Question 2:"
@@ -83,7 +83,7 @@
                 android:text="RadioButton" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Question 3:"
@@ -115,7 +115,7 @@
                 android:text="RadioButton" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Question 4:"
