--- a/QuizGame/app/src/main/res/layout/fragment_hard_tab.xml
+++ b/QuizGame/app/src/main/res/layout/fragment_hard_tab.xml
@@ -14,10 +14,11 @@
         android:gravity = "center"/>
 
     <Button
+        android:id="@+id/HardStartBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start Game"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="500dp"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
