--- a/QuizGame/app/src/main/res/layout/activity_geography_easy.xml
+++ b/QuizGame/app/src/main/res/layout/activity_geography_easy.xml
@@ -177,6 +177,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="RadioButton" />
+
+            <Button
+                android:id="@+id/finishButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Finish Quiz" />
         </LinearLayout>
     </ScrollView>
 
